Emojis quitados del comparador de suma Array